--- a/_includes/download.html
+++ b/_includes/download.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2></h2>
                     <p></p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg"></a>
+<!--                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg"></a>-->
                 </div>
             </div>
         </div>
